changed project settings for 90's pack requirements
see documentation for 90's pack for more details

Disabled the following features in Project Settings > Rendering:

.Bloom
.Ambient Occlusion
.Auto Exposure
.Motion Blur
.Anti Aliasing
.Dynamic Global Illumination

--- a/InfluencePackage/Config/DefaultEngine.ini
+++ b/InfluencePackage/Config/DefaultEngine.ini
@@ -42,12 +42,18 @@ SoundCueCookQualityIndex=-1
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=0
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.Lumen.TraceMeshSDFs=1
 r.VelocityOutputPass=1
-r.AntiAliasingMethod=2
+r.AntiAliasingMethod=0
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.MotionBlur=False
+r.Mobile.AntiAliasing=0
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
