Master material created
top 10 material moments of all times

--- a/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -290,20 +290,21 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 MaterialInstanceConstant=
 
 [EditorStartup]
-LastLevel=/Game/HorrorEngine/Maps/Overview
+LastLevel=/Game/influence/maps/Island
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/90s_Style_Graphics/DemoContent/Textures/Objects/Crate
-MRUItem1=/Game/90s_Style_Graphics/Materials/Masters/Material_Master
-MRUItem2=/Game/90s_Style_Graphics/Materials/Physic_Materials/02_Wood
-MRUItem3=/Game/90s_Style_Graphics/DemoContent/Materials/Instances/Objects/Crate
-MRUItem4=/Game/90s_Style_Graphics/DemoContent/Meshes/Objects/Crate
-MRUItem5=/Game/90s_Style_Graphics/DemoContent/Materials/Instances/Characters/Mark
-MRUItem6=/Game/90s_Style_Graphics/DemoContent/Characters/Mark/Mark
-MRUItem7=/Game/HorrorEngine/Maps/Demonstration
+MRUItem0=/Game/OG_Textures/Master_Material
+MRUItem1=/Game/90s_Style_Graphics/DemoContent/Textures/Objects/Crate
+MRUItem2=/Game/90s_Style_Graphics/Materials/Masters/Material_Master
+MRUItem3=/Game/90s_Style_Graphics/Materials/Physic_Materials/02_Wood
+MRUItem4=/Game/90s_Style_Graphics/DemoContent/Materials/Instances/Objects/Crate
+MRUItem5=/Game/90s_Style_Graphics/DemoContent/Meshes/Objects/Crate
+MRUItem6=/Game/90s_Style_Graphics/DemoContent/Materials/Instances/Characters/Mark
+MRUItem7=/Game/90s_Style_Graphics/DemoContent/Characters/Mark/Mark
+MRUItem8=/Game/HorrorEngine/Maps/Demonstration
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -318,7 +319,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/90s_Style_Graphics/Characters
+ContentBrowserDrawer.SelectedPaths=/Game/OG_Textures
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -918,6 +919,76 @@ Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
 Texture2D.Compositing=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.HLOD=True
+BP_Sky_Sphere_C.Physics=True
+BP_Sky_Sphere_C.Networking=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionMaterialAttributeLayers.MaterialExpression=True
+MaterialExpressionMaterialAttributeLayers.Layers=True
+MaterialExpressionMakeMaterialAttributes.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionLandscapeLayerBlend.MaterialExpressionLandscapeLayerBlend=True
+MaterialExpressionLandscapeLayerBlend.MaterialExpression=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.AtmosphereAndCloud=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Physics=True
+SkyLight.Networking=True
+SkyLight.Actor=True
+VolumetricCloud.TransformCommon=True
+VolumetricCloud.Layer=True
+VolumetricCloud.Planet=True
+VolumetricCloud.Cloud Material=True
+VolumetricCloud.Cloud Tracing=True
+VolumetricCloud.Rendering=True
+VolumetricCloud.Physics=True
+VolumetricCloud.Tags=True
+VolumetricCloud.Activation=True
+VolumetricCloud.Cooking=True
+VolumetricCloud.Replication=True
+VolumetricCloud.Networking=True
+VolumetricCloud.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.RayTracing=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.HLOD=True
+DirectionalLight.Physics=True
+DirectionalLight.Networking=True
+DirectionalLight.Actor=True
 
 [WorldBrowser]
 DisplayPaths=False
@@ -925,7 +996,7 @@ DisplayActorsCount=False
 
 [RootWindow]
 ScreenPosition=X=28.000 Y=0.000
-WindowSize=X=1284.800 Y=724.800
+WindowSize=X=1286.400 Y=726.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1968,6 +2039,7 @@ RecentsFiles=d:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/Control
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2065,6 +2137,8 @@ MovieSceneTrackRecorderSettings=
 DebugCameraControllerSettings="\"Object.General.CycleViewModes\" "
 InputModifierDeadZone=
 LinuxTargetSettings="\"Object.Audio.Audio|CookOverrides\" "
+MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[4]\" "
+MaterialExpression=
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2163,6 +2237,7 @@ WmfMediaSettings=True
 /Game/90s_Style_Graphics/DemoContent/Textures/Objects/Crate.Crate=1
 /Game/90s_Style_Graphics/DemoContent/Materials/Instances/Objects/Crate.Crate=1
 /Game/90s_Style_Graphics/DemoContent/Meshes/Objects/Crate.Crate=1
+/Game/OG_Textures/Master_Material.Master_Material=0
 
 [MaterialEditor]
 PrimType=1
