Wooden Plank Asset
Added in wooden plank asset to project.

--- a/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -293,20 +293,22 @@ MaterialInstanceConstant=
 LastLevel=/Game/HorrorEngine/Maps/Overview
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/influence/Props/carboardBox_SM
-MRUItem1=/Game/influence/Props/carboardBox_M
-MRUItem2=/Game/OG_Textures/Master_Material
-MRUItem3=/Game/90s_Style_Graphics/DemoContent/Textures/Objects/Crate
-MRUItem4=/Game/90s_Style_Graphics/Materials/Masters/Material_Master
-MRUItem5=/Game/90s_Style_Graphics/Materials/Physic_Materials/02_Wood
-MRUItem6=/Game/90s_Style_Graphics/DemoContent/Materials/Instances/Objects/Crate
-MRUItem7=/Game/90s_Style_Graphics/DemoContent/Meshes/Objects/Crate
-MRUItem8=/Game/90s_Style_Graphics/DemoContent/Materials/Instances/Characters/Mark
-MRUItem9=/Game/90s_Style_Graphics/DemoContent/Characters/Mark/Mark
-MRUItem10=/Game/HorrorEngine/Maps/Demonstration
+MRUItem0=/Game/influence/Props/Plank
+MRUItem1=/Game/influence/Props/Props_Materials/woodenBoard_M
+MRUItem2=/Game/influence/Props/carboardBox_SM
+MRUItem3=/Game/influence/Props/carboardBox_M
+MRUItem4=/Game/OG_Textures/Master_Material
+MRUItem5=/Game/90s_Style_Graphics/DemoContent/Textures/Objects/Crate
+MRUItem6=/Game/90s_Style_Graphics/Materials/Masters/Material_Master
+MRUItem7=/Game/90s_Style_Graphics/Materials/Physic_Materials/02_Wood
+MRUItem8=/Game/90s_Style_Graphics/DemoContent/Materials/Instances/Objects/Crate
+MRUItem9=/Game/90s_Style_Graphics/DemoContent/Meshes/Objects/Crate
+MRUItem10=/Game/90s_Style_Graphics/DemoContent/Materials/Instances/Characters/Mark
+MRUItem11=/Game/90s_Style_Graphics/DemoContent/Characters/Mark/Mark
+MRUItem12=/Game/HorrorEngine/Maps/Demonstration
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1058,6 +1060,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 LastLogListing=LoadErrors
 
 [PlacementMode]
+RecentlyPlaced=/Game/influence/Props/Plank.Plank;
 RecentlyPlaced=/Game/influence/Props/Box_Cardb1.Box_Cardb1;
 RecentlyPlaced=/Game/90s_Style_Graphics/Characters/Human_Skeleton.Human_Skeleton;
 
@@ -2083,6 +2086,7 @@ RecentsFiles=d:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/Control
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2282,6 +2286,8 @@ WmfMediaSettings=True
 /Game/90s_Style_Graphics/DemoContent/Meshes/Objects/Crate.Crate=1
 /Game/OG_Textures/Master_Material.Master_Material=0
 /Game/influence/Props/carboardBox_SM.carboardBox_SM=1
+/Game/influence/Props/Props_Materials/woodenBoard_M.woodenBoard_M=1
+/Game/influence/Props/Plank.Plank=1
 
 [MaterialEditor]
 PrimType=1
