--- a/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -296,19 +296,20 @@ LastLevel=/Game/influence/maps/Island
 CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/influence/Props/Plank
-MRUItem1=/Game/influence/Props/Props_Materials/woodenBoard_M
-MRUItem2=/Game/influence/Props/carboardBox_SM
-MRUItem3=/Game/influence/Props/carboardBox_M
-MRUItem4=/Game/OG_Textures/Master_Material
-MRUItem5=/Game/90s_Style_Graphics/DemoContent/Textures/Objects/Crate
-MRUItem6=/Game/90s_Style_Graphics/Materials/Masters/Material_Master
-MRUItem7=/Game/90s_Style_Graphics/Materials/Physic_Materials/02_Wood
-MRUItem8=/Game/90s_Style_Graphics/DemoContent/Materials/Instances/Objects/Crate
-MRUItem9=/Game/90s_Style_Graphics/DemoContent/Meshes/Objects/Crate
-MRUItem10=/Game/90s_Style_Graphics/DemoContent/Materials/Instances/Characters/Mark
-MRUItem11=/Game/90s_Style_Graphics/DemoContent/Characters/Mark/Mark
-MRUItem12=/Game/HorrorEngine/Maps/Demonstration
+MRUItem0=/Game/influence/maps/Island
+MRUItem1=/Game/influence/Props/Plank
+MRUItem2=/Game/influence/Props/Props_Materials/woodenBoard_M
+MRUItem3=/Game/influence/Props/carboardBox_SM
+MRUItem4=/Game/influence/Props/carboardBox_M
+MRUItem5=/Game/OG_Textures/Master_Material
+MRUItem6=/Game/90s_Style_Graphics/DemoContent/Textures/Objects/Crate
+MRUItem7=/Game/90s_Style_Graphics/Materials/Masters/Material_Master
+MRUItem8=/Game/90s_Style_Graphics/Materials/Physic_Materials/02_Wood
+MRUItem9=/Game/90s_Style_Graphics/DemoContent/Materials/Instances/Objects/Crate
+MRUItem10=/Game/90s_Style_Graphics/DemoContent/Meshes/Objects/Crate
+MRUItem11=/Game/90s_Style_Graphics/DemoContent/Materials/Instances/Characters/Mark
+MRUItem12=/Game/90s_Style_Graphics/DemoContent/Characters/Mark/Mark
+MRUItem13=/Game/HorrorEngine/Maps/Demonstration
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -323,7 +324,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/influence/Props
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
