Tracking enemy NOT DONE
Trying to figure out tracking with a static Camera Its hard XD Dont have a fix yet

--- a/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -117,7 +117,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=992)
 LastExecutedLaunchDevice=Windows@LAPTOP-HGQ06V4C
 LastExecutedLaunchName=LAPTOP-HGQ06V4C
 LastExecutedPIEPreviewDevice=
@@ -126,6 +126,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
 NewWindowHeight=992
 MultipleInstancePositions=(X=0,Y=0)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -297,45 +298,58 @@ MaterialInstanceConstant=
 UserDefinedStruct=UserDefinedStruct.DefaultValues.PlayerSettings_43_3608660E4577765E43C7DDA81FBC5A4A,
 InputMappingContext=InputMappingContext.Mappings.ActionMappings./Game/influence/AdriaanDevPlace/NewInfuence_Coree/Input/IA_Inputs/IA_Look.IA_Look,InputMappingContext.Mappings.ActionMappings,
 BlendSpace1D=BlendSpace1D.BlendSamples.GroupName,BlendSpace1D.Axis Settings.Horizontal Axis,
-CameraComponent=CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens
-CapsuleComponent=
+CameraComponent=CameraComponent.PostProcess.Lens,Camera_C.Physics.ConstraintsGroup,
+CapsuleComponent=Camera_C.Physics.ConstraintsGroup,
 Camera_C=Camera_C.Physics.ConstraintsGroup,
-SkeletalMeshComponent=Camera_C.Physics.ConstraintsGroup,
+SkeletalMeshComponent=Camera_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
 StaticMeshComponent=Camera_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
-K2Node_VariableGet=
-SceneComponent=Camera_C.Physics.ConstraintsGroup,
+K2Node_VariableGet=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
+SceneComponent=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
 NewCam_C=Camera_C.Physics.ConstraintsGroup,
 Test_House_C=Camera_C.Physics.ConstraintsGroup,
 CamSwitch_C=Camera_C.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
+IF_Character_C=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
+ArrowComponent=Camera_C.Physics.ConstraintsGroup,
+Enemy_Main_C=Camera_C.Physics.ConstraintsGroup,
+Landscape=Camera_C.Physics.ConstraintsGroup,
+StaticMeshActor=Camera_C.Physics.ConstraintsGroup,
+K2Node_FunctionEntry=Camera_C.Physics.ConstraintsGroup,
+SphereComponent=Camera_C.Physics.ConstraintsGroup,
+K2Node_VariableSet=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
+K2Node_CallFunction=Camera_C.Physics.ConstraintsGroup,
+PropertyWrapper=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,
 
 [EditorStartup]
 LastLevel=/Game/influence/AdriaanDevPlace/MAP/DevMapAdriaan
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/IF_Character.IF_Character
+OpenAssetsAtExit=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/Enemy_Main.Enemy_Main
+OpenAssetsAtExit=/Game/90s_Style_Graphics/DemoContent/Characters/Piney_Senior/Piney_Senior.Piney_Senior
 
 [ContentBrowserRecent]
-MRUItem0=/Game/influence/AdriaanDevPlace/MAP/DevMapAdriaan
-MRUItem1=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/CamSwitch
-MRUItem2=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/Test_House
-MRUItem3=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/Camera
-MRUItem4=/Game/90s_Style_Graphics/Characters/Animations/Actor/Actor_AnimBP
-MRUItem5=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Animations/IF_Blendspace
-MRUItem6=/Game/90s_Style_Graphics/Characters/Animations/Actor/Actor_IdleRun_2D
-MRUItem7=/Game/90s_Style_Graphics/Characters/Animations/Player/Player_IdleRun_2D
-MRUItem8=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Animations/NewBlendSpace1D
-MRUItem9=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Animations/NewAnimBlueprint
-MRUItem10=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Input/IA_Inputs/IA_Look
-MRUItem11=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Input/IA_Inputs/IA_Move
-MRUItem12=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Input/IMP/AllMayorKeyInputs
-MRUItem13=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/IF_Character
-MRUItem14=/Game/HorrorEngine/HE_GameplaySettings
-MRUItem15=/Game/HorrorEngine/Blueprints/Core/HorrorEngineFunctions
-MRUItem16=/Game/HorrorEngine/Blueprints/Core/HorrorEngineCharacter
-MRUItem17=/Game/HorrorEngine/Blueprints/Core/HorrorEngineInterface
-MRUItem18=/Game/HorrorEngine/Blueprints/Core/Use
-MRUItem19=/Game/HorrorEngine/Blueprints/Core/CameroidInput
+MRUItem0=/Game/90s_Style_Graphics/DemoContent/Characters/Piney_Senior/Piney_Senior
+MRUItem1=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/Enemy_Main
+MRUItem2=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/IF_Character
+MRUItem3=/Game/influence/AdriaanDevPlace/MAP/DevMapAdriaan
+MRUItem4=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/CamSwitch
+MRUItem5=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/Test_House
+MRUItem6=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/Camera
+MRUItem7=/Game/90s_Style_Graphics/Characters/Animations/Actor/Actor_AnimBP
+MRUItem8=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Animations/IF_Blendspace
+MRUItem9=/Game/90s_Style_Graphics/Characters/Animations/Actor/Actor_IdleRun_2D
+MRUItem10=/Game/90s_Style_Graphics/Characters/Animations/Player/Player_IdleRun_2D
+MRUItem11=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Animations/NewBlendSpace1D
+MRUItem12=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Animations/NewAnimBlueprint
+MRUItem13=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Input/IA_Inputs/IA_Look
+MRUItem14=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Input/IA_Inputs/IA_Move
+MRUItem15=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Input/IMP/AllMayorKeyInputs
+MRUItem16=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/IF_Character
+MRUItem17=/Game/HorrorEngine/HE_GameplaySettings
+MRUItem18=/Game/HorrorEngine/Blueprints/Core/HorrorEngineFunctions
+MRUItem19=/Game/HorrorEngine/Blueprints/Core/HorrorEngineCharacter
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -350,7 +364,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.749049664
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/influence/AdriaanDevPlace/MAP
+ContentBrowserDrawer.SelectedPaths=/Game/90s_Style_Graphics/DemoContent/Characters/Piney_Senior
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1640,6 +1654,125 @@ NewCam_C.Networking=True
 NewCam_C.Actor=True
 CamSwitch_C.Default=True
 CamSwitch_C.Networking=True
+IF_Character_C.Default=True
+K2Node_Timeline.GraphNodeDetail=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Cooking=True
+ArrowComponent.Variable=True
+ArrowComponent.TransformCommon=True
+ArrowComponent.Sockets=True
+ArrowComponent.ArrowComponent=True
+ArrowComponent.HLOD=True
+ArrowComponent.Rendering=True
+ArrowComponent.ComponentTick=True
+ArrowComponent.Navigation=True
+ArrowComponent.Tags=True
+ArrowComponent.ComponentReplication=True
+ArrowComponent.Cooking=True
+ArrowComponent.Events=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+Enemy_Main_C.TransformCommon=True
+Enemy_Main_C.Animation=True
+Enemy_Main_C.Mesh=True
+Enemy_Main_C.Tick=True
+Enemy_Main_C.ComponentTick=True
+Enemy_Main_C.Clothing=True
+Enemy_Main_C.LeaderPoseComponent=True
+Enemy_Main_C.Physics=True
+Enemy_Main_C.Collision=True
+Enemy_Main_C.Lighting=True
+Enemy_Main_C.AnimationRig=True
+Enemy_Main_C.Deformer=True
+Enemy_Main_C.SkinWeights=True
+Enemy_Main_C.HLOD=True
+Enemy_Main_C.Rendering=True
+Enemy_Main_C.Mobile=True
+Enemy_Main_C.Navigation=True
+Enemy_Main_C.RayTracing=True
+Enemy_Main_C.VirtualTexture=True
+Enemy_Main_C.Tags=True
+Enemy_Main_C.AssetUserData=True
+Enemy_Main_C.Replication=True
+Enemy_Main_C.ComponentReplication=True
+Enemy_Main_C.Activation=True
+Enemy_Main_C.Variable=True
+Enemy_Main_C.Cooking=True
+Enemy_Main_C.Character Movement (General Settings)=True
+Enemy_Main_C.Character Movement: Walking=True
+Enemy_Main_C.Character Movement: Jumping / Falling=True
+Enemy_Main_C.Character Movement (Networking)=True
+Enemy_Main_C.Character Movement: Swimming=True
+Enemy_Main_C.Character Movement: Flying=True
+Enemy_Main_C.Character Movement: Custom Movement=True
+Enemy_Main_C.Character Movement (Rotation Settings)=True
+Enemy_Main_C.Character Movement: Physics Interaction=True
+Enemy_Main_C.Character Movement=True
+Enemy_Main_C.Character Movement: Avoidance=True
+Enemy_Main_C.RootMotion=True
+Enemy_Main_C.Character Movement: NavMesh Movement=True
+Enemy_Main_C.NavMovement=True
+Enemy_Main_C.Velocity=True
+Enemy_Main_C.PlanarMovement=True
+Enemy_Main_C.MovementComponent=True
+Enemy_Main_C.Shape=True
+Enemy_Main_C.Character=True
+Enemy_Main_C.Camera=True
+Enemy_Main_C.Pawn=True
+Enemy_Main_C.Actor=True
+Enemy_Main_C.Input=True
+Enemy_Main_C.WorldPartition=True
+Enemy_Main_C.Events=True
+Enemy_Main_C.Networking=True
+Enemy_Main_C.Materials=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Rendering=True
+TextRenderActor.Lighting=True
+TextRenderActor.HLOD=True
+TextRenderActor.Navigation=True
+TextRenderActor.Tags=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Physics=True
+TextRenderActor.Networking=True
+TextRenderActor.Input=True
+TextRenderActor.Actor=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.HLOD=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+K2Node_VariableSet.Events=True
 
 [WorldBrowser]
 DisplayPaths=False
@@ -1664,16 +1797,18 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/Enemy_Main.Enemy_Main;
 RecentlyPlaced=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/CamSwitch.CamSwitch;
 RecentlyPlaced=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/NewCam.NewCam;
 RecentlyPlaced=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/Camera.Camera;
 RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/Test_House.Test_House;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
@@ -2893,19 +3028,19 @@ ChildActorComponent="\"Object\" "
 CharacterMovementComponent="\"Object\" \"Object.NavMovement.NavAgentProps\" "
 PawnMovementComponent="\"Object\" \"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object\" \"Object.NavMovement.NavAgentProps\" "
-MovementComponent="\"Object\" \"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object\" "
 HorrorEngineCharacter_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Character=
 Pawn=
 IF_Character_C=
 EdGraphNode_Comment="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[4].Modifiers\" \"Object.Mappings.Mappings.Mappings[4].Modifiers.Modifiers[0]\" "
-DataAsset="\"Object\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[4].Modifiers\" \"Object.Mappings.Mappings.Mappings[4].Modifiers.Modifiers[0]\" "
+DataAsset="\"Object\" "
 InputAction="\"Object\" "
 CameraComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" "
 SpringArmComponent="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
-PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
+PreviewMeshCollection="\"Object\" "
 AssetViewerSettings="\"Object\" "
 NewAnimBlueprint_C="\"Object\" "
 AnimInstance="\"Object\" "
@@ -2928,6 +3063,10 @@ BoxComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 K2Node_InputKey="\"Object\" "
 CapsuleComponent="\"Object\" "
+ProjectileMovementComponent="\"Object\" "
+ArrowComponent="\"Object\" "
+SphereComponent="\"Object\" "
+BoneProxy="\"Object\" "
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
